# Unnamed_system

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
.claude/: task_template.md
config/: constitution.yaml  entity_profile.yaml  expression_mappings.yaml  policy_rules.yaml  shopkeeper_mode.yaml  state_rules.yaml
docs/: APP_FLOW.md  BACKEND_STRUCTURE.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  PRD.md  TECH_STACK.md  frame.md  lessons.md  progress.md
docs/references/: hardware.md  intro.md  system_logic.md
prompts/: expression_system.txt  reflection_system.txt  shopkeeper_system.txt
prompts/partials/: constitution_block.txt  memory_context.txt  state_context.txt
scripts/: export_memories.py  init_db.py  inspect_state.py  monitor.py  replay_session.py  start_api.py  test_llm.py
src/conscious_entity/: runtime_env.py
src/conscious_entity/core/: config_loader.py  event_bus.py  loop.py
tests/: conftest.py
tests/fixtures/: sample_events.json  sample_state.json
tests/integration/: test_episodic_store.py  test_full_loop.py  test_shopkeeper_flow.py
tests/unit/: test_api_dialog.py  test_claude_client.py  test_cli.py  test_config_loader.py  test_constitution.py  test_context_builder.py  test_db_connection.py  test_expression_engine.py  test_menu_normalizer.py  test_policy_selector.py  test_response_guard.py  test_runtime_env.py  test_salience_scorer.py  test_shopkeeper_language.py  test_shopkeeper_models.py  test_shopkeeper_prompt_builder.py  test_shopkeeper_router.py  test_shopkeeper_state_store.py  test_short_term_memory.py  test_state_engine.py  test_style_mapper.py
(+35 files in other folders)
