[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conscious-entity"
version = "0.1.0"
description = "A minimal artificial entity designed to trigger consciousness attribution"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
# sentence-transformers deferred to v0.2 semantic retrieval phase
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
